--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(bezier-curves LANGUAGES CXX)
+project(bezier-curves)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -14,6 +14,10 @@ add_executable(
 
     src/window.hpp
 )
+
+if (NOT MSVC)
+    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
+endif()
 
 target_include_directories(${PROJECT_NAME} PRIVATE deps/glfw/include)
 target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
